fix in desktop:  align items - start;delete logo margin - footer

--- a/css/style.css
+++ b/css/style.css
@@ -1139,7 +1139,6 @@ img {
     flex-shrink: 0;
     flex-grow: 0;
     margin-right: 76px;
-    padding: 20px 0;
   }
   .contacts-info-a {
     font-size: 16px;
@@ -1226,7 +1225,7 @@ img {
     max-height: 312px;
   }
   .row {
-    align-items: baseline;
+    align-items: start;
   }
   .subscribe {
     margin-left: 80px;
